--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="go-home">
-      <a href="mainpage.html">Go Home</a>
+      <a href="index.html">Go Home</a>
     </div>
   </body>
 </html>
